--- a/style.css
+++ b/style.css
@@ -36,7 +36,11 @@ header {
 	display: flex;
 	width: 100%;
 	justify-content: center;
-	margin-bottom: 20px;
+}
+
+.header p {
+	display: flex;
+	justify-content: center;
 }
 
 h1, h3, h6 {
