--- a/style.css
+++ b/style.css
@@ -95,3 +95,21 @@ form .form-group {
 	color: red;
 	margin: 0 auto;
 }
+
+dialog {
+	border: none;
+	border-radius: 5px;
+	background-color: #fff;
+}
+
+.languages {
+	margin-bottom: 20px;
+}
+
+.languages a+a {
+	margin-left: 30px;
+}
+
+a {
+	cursor: pointer;
+}
